fix: Обновлены стили в LanguageSwitcher, добавлен flex-wrap для адаптивности. В AuthContext добавлено сброс состояния пользователя при выходе. В SearchPage реализована интернационализация для текстовых элементов и улучшены сообщения об ошибках. Обновлены локализации для английского, русского и украинского языков.

--- a/app/components/LanguageSwitcher/LanguageSwitcher.module.css
+++ b/app/components/LanguageSwitcher/LanguageSwitcher.module.css
@@ -1,7 +1,8 @@
 .switcherContainer {
     display: flex;
-    gap: 10px;
+    gap: 12px;
     align-items: center;
+    flex-wrap: wrap;
   }
   
   .langButton {
